--- a/docs/portfolio/CoffeeWebsite/css/style.css
+++ b/docs/portfolio/CoffeeWebsite/css/style.css
@@ -295,6 +295,10 @@ section{
     color:#fff;
 }
 
+.home .content h3 span {
+    color: var(--main-color);
+}
+
 .home .content p{
     font-size: 2rem;
     font-weight: lighter;
