[公司形象網站] => nav 調整 => 關閉 icon => top, right 間距接近

--- a/01-Excellence-Web/style.css
+++ b/01-Excellence-Web/style.css
@@ -200,6 +200,7 @@ nav {
     justify-content: center;
     margin: 0.5% auto;
     position: fixed;
+    top: 3px;
     z-index: var(--z-index-top1-nav);
 }
 
